[#166879558] Fix toggle label wrap early

--- a/components/consumer/desktop/claim-toggle-content/style.scss
+++ b/components/consumer/desktop/claim-toggle-content/style.scss
@@ -16,6 +16,7 @@
     .pbg-claim-toggle-content-label-explainer-placeholder {
       float: left;
       width: calc(100% - 16px);
+      white-space: pre;
 
       .pbg-label {
         @extend .pbg-desktop-heading-3;
